Bug 53558 - [bug] Mouse cursor when resizing acts oddly when moved outside weston
Summary: [bug] Mouse cursor when resizing acts oddly when moved outside weston
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium minor
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-15 21:30 UTC by Brian Lovin
Modified: 2012-10-30 15:19 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Brian Lovin 2012-08-15 21:30:46 UTC
System Environment:
--------------------------
Distro: Ubuntu 12.04
Arch: x86_64
glproto master ec1eec4355ee4a6c5134f2178192f10b6d28a87a
mesa master 538085c5d423df4fed3c3b2c473c3684f7b08db6
wayland master b57694ca0e9dc7d2845ce9fb0ac9c4b0ebc940ce
pixman master 09cb1ae10b1976970233c934d27c36e0a4203e1c
wayland-test master 14cdb54b5f9320aac9dd3c4dfe490952a40b0250
weston master 70fc4a4cd6ebff1125e3f7fd8736b4dafa6c8c76
drm master 3163cfe4db925429760407e77140e2d595338bc2
cairo master 95b7f4fe3a5deea6766538d843c75626e4bb68cf
libX11 master 8042f88ace33573f9d0dfaa21ed54ac7cef266d5
macros master 0890e4003aacfa7113ab3f4e3ad7c5636f8e922a
libxkbcommon master f491285a5f4b5f680a87e9e3076e8499f3ed2a3b
dri2proto master 4eeacce4c4a300b938b7e3fb78a8e443c491780b


Detailed Description:
-----------------------------
Run weston-terminal (for example), then resize the window and drag the mouse cursor outside the window for weston - when you attempt to drag it back you will have to move the mouse quite a bit.

It's like the mouse position is being updated despite the mouse cursor not moving - and this position must be "subtracted" before the cursor will move again.


Steps to Reproduce:
----------------------------
1. start weston under X11
2. ./weston-terminal
3. Resize window to as large as you can then drag the mouse further outside the weston window.
4. You will notice that when moving back the cursor doesn't immediately move - like I described above.
Comment 1 Kristian Høgsberg 2012-10-30 15:04:09 UTC
commit 7330862f9e25d513cfcc49358b7187524a9e1940
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Tue Oct 30 11:04:52 2012 -0400

    compositor-x11: Grab pointer on button press, ungrab on release
    
    This lets us confine the X pointer to the Weston X window, which corresponds
    better with the rendered Wayland cursor actually moves.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=53558


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.